# vs-placebo

./: .dockerignore  .gitmodules  README.md  meson.build  meson.options
.github/workflows/: build.yml  windows.yml
docker/: Dockerfile.x86_64-w64-mingw32
docker/crossfiles/: x86_64-w64-mingw32.meson
src/: deband.c  resample.c  shader.c  tonemap.c  vs-placebo.c
